Unity RubysAdventure demo does not render properly if WebGL2 is enabled. https://bugs.webkit.org/show_bug.cgi?id=215846

Reviewed by Kenneth Russell.

Source/WebCore:

uniform*v srcLength parameter needs to be divided by the uniform
component size before passing to OpenGL's count parameter.

Test: webgl/conformance2/uniforms/gl-uniform-arrays-sub-source.html

* html/canvas/WebGL2RenderingContext.cpp:
(WebCore::WebGL2RenderingContext::uniform2uiv):
(WebCore::WebGL2RenderingContext::uniform3uiv):
(WebCore::WebGL2RenderingContext::uniform4uiv):
(WebCore::WebGL2RenderingContext::uniformMatrix2x3fv):
(WebCore::WebGL2RenderingContext::uniformMatrix3x2fv):
(WebCore::WebGL2RenderingContext::uniformMatrix2x4fv):
(WebCore::WebGL2RenderingContext::uniformMatrix4x2fv):
(WebCore::WebGL2RenderingContext::uniformMatrix3x4fv):
(WebCore::WebGL2RenderingContext::uniformMatrix4x3fv):
(WebCore::WebGL2RenderingContext::uniform2fv):
(WebCore::WebGL2RenderingContext::uniform3fv):
(WebCore::WebGL2RenderingContext::uniform4fv):
(WebCore::WebGL2RenderingContext::uniform2iv):
(WebCore::WebGL2RenderingContext::uniform3iv):
(WebCore::WebGL2RenderingContext::uniform4iv):
(WebCore::WebGL2RenderingContext::uniformMatrix2fv):
(WebCore::WebGL2RenderingContext::uniformMatrix3fv):
(WebCore::WebGL2RenderingContext::uniformMatrix4fv):

LayoutTests:

* webgl/conformance2/uniforms/gl-uniform-arrays-sub-source-expected.txt: Added.
* webgl/conformance2/uniforms/gl-uniform-arrays-sub-source.html: Added.
* webgl/resources/webgl_test_files/conformance2/uniforms/gl-uniform-arrays-sub-source.html: Added.


Canonical link: https://commits.webkit.org/230480@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@268502 268f45cc-cd09-0410-ab3c-d52691b4dbfc